<resources>
    <string name="app_name">PayamGostar</string>
    <string name="menu_settings">تنظیمات</string>
    <string name="menu_about">درباره ما</string>
    <string name="menu_Enable_record">Enable Record</string>
    <string name="menu_Disable_record">Disable Record</string>
    <string name="title_activity_main">پیامگستر</string>
    <string name="list_play_your_recordeed_call">play your recorded call</string>
    <string name="list_send_your_recordeed_call">send your recorded call</string>
    <string name="list_erase_your_recordeed_call">erase your recorded call</string>
    <string name="receiver_start_call">Start record call</string>
    <string name="receiver_end_call">End Record call</string>
    <string name="confirm_delete_title">Call deletion</string>
    <string name="confirm_delete_text">Are you sure you want to delete this recording?</string>
    <string name="confirm_delete_yes">yes</string>
    <string name="confirm_delete_no">no</string>
    <string name="options_title">Recording options</string>
    <string name="options_delete">Delete</string>
    <string name="confirm_play">Play</string>
    <string name="confirm_send">Send</string>
    <string name="sendMail_subject">Your record from your phone</string>
    <string name="sendMail_body">This is a call record from your phone</string>
    <string name="about_title">درباره ما</string>
    <string name="about_content">PayamGostar Call recorder by Tejarat Electronic Aval Eurasia co.</string>
    <string name="about_close_button">بستن</string>
    <string name="send_mail">Send Mail</string>
    <string name="withheld_number">Withheld Number</string>
    <string name="menu_record_is_now_enabled">Call recording enabled</string>
    <string name="menu_record_is_now_disabled">Call recording disabled</string>
    <string name="no_records_message">There are no recordings in this phone.\nTo enable record ability open the main menu and choose \"Enable call recording\".\nAfter that the application will record all your incoming and outgoing calls.</string>
    <string name="radio_Enable_record">Enable call recording</string>
    <string name="radio_Disable_record">Disable call recording</string>
    <string name="textview_startup">Please choose if the application should record your calls.\nYou can always enable or disable recording by pressing the Android menu button.</string>
    <string name="dialog_welcome_screen">Welcome Screen</string>
    <string name="dialog_no_memory">There is no memory card in your device.\nPlease install one.</string>
    <string name="dialog_close">Close</string>
    <string name="menu_terms">Terms of use</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="dialog_terms">Terms of use</string>
    <string name="dialog_privacy">Privacy Policy</string>
    <string name="dialog_privacy_terms">Please click the buttons below to see the terms of use and privacy policy</string>
    <string name="menu_delete_all">Delete All recordings</string>
    <string name="dialog_delete_all_title">Delete everything?</string>
    <string name="dialog_delete_all_content">Are you sure you want to delete all of your recordings?</string>
    <string name="dialog_delete_all_yes">Yes</string>
    <string name="dialog_delete_all_no">No</string>
    <string name="notification_ticker">Recording is now Starting</string>
    <string name="notification_title">The phone is now on a call</string>
    <string name="notification_text">If recording was enabled, recording should have started, if not you can enable recording in the application, the phone will stop the recording when the conversation ends</string>
    <string name="record_impossible">Unfortunately, it is not possible to record calls in this device. (Usually because another application/service is using the microphone in the background)</string>
    <string name="sync_calls">Sync Calls</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">صدای زنگ</string>
    <string name="pref_ringtone_silent">سکوت</string>
    <string name="pref_title_vibrate">لرزش</string>
    <string name="pg_server_address">آدرس سرور</string>
    <string name="line_number">شماره خط</string>
    <string name="save_settings">ذخیره تنظیمات</string>
    <string name="enter_valid_phone_number">لطفا یک شماره تلفن معتبر وارد کنید.</string>
    <string name="server_address_is_not_valid">آدرس سرور معتبر نیست.</string>

    <string name="server_address_hint">مثلا: http://192.168.1.1/</string>
    <string name="phone_number_hint">مثلا: 09123456789</string>
    <string name="telephony_system_key">کلید سیستم تلفنی:</string>
    <string name="menu_refresh">تازه سازی</string>
    <string name="menu_logs">گزارش خطاها</string>
    <string name="extension_number">شماره داخلی</string>
    <string name="enter_valid_extension_number">لطفا یک شماره داخلی معتبر وارد کنید.</string>
    <string name="hint_sample_ext">مثلا: 101</string>
    <string name="hint_tskey">مثلا: tskey</string>
    <string name="btn_clean_all">پاک کردن همه تماس ها</string>
    <string name="msg_all_records_cleaned">همه تماس ها پاک شدند.</string>
    <string name="err_error_clean_all_records">خطایی در هنگام پاک کردن تماس ها رخ داد.</string>
    <string name="title_activity_login">ورود</string>

    <!-- Strings related to login -->
    <string name="prompt_email">ایمیل</string>
    <string name="prompt_password">رمز عبور (اختیاری)</string>
    <string name="action_sign_in">ورود یا ثبت نام</string>
    <string name="action_sign_in_short">ورود</string>
    <string name="error_invalid_email">آدرس ایمیل معتبر نیست.</string>
    <string name="error_invalid_password">این رمز عبور خیلی کوتاه است.</string>
    <string name="error_incorrect_password">رمز عبور نامعتبر است.</string>
    <string name="error_field_required">این فیلد الزامی است.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_password_length">طول رمز عبور باید بیشتر از 3 حرف باشد.</string>
    <string name="menu_sign_out">خروج</string>
    <string name="no_sync_data_available">هیچ اطلاعاتی برای همگام سازی وجود ندارد.</string>
    <string name="prompt_username">نام کاربری</string>
    <string name="err_username_not_valid">نام کاربری معتبر نیست.</string>
    <string name="recording_source_voiceCall">صدای مکالمه</string>
    <string name="recording_source_auto">تشخیص خودکار</string>
    <string name="recording_source_uplink">صدای کاربر</string>
    <string name="recording_source_downlink">صدای مخاطب</string>
    <string name="lbl_recording_source">منبع ضبط صدا</string>
    <string name="recording_source_mic">میکروفون</string>
    <string name="chk_enable_recording">مکالمات ضبط شوند</string>
    <string name="recording_source_default">صدای پیشفرض</string>
    <string name="recording_source_communication">ورودی ارتباطات صوتی نظیر ویپ</string>
    <string name="msg_clean_title">حذف سابقه تماس ها</string>
    <string name="msg_clean_message">آیا برای حذف سابقه تماس ها و فایل های ضبط شده مطمئن هستید؟</string>
    <string name="msg_clean_btn_yes">بله، حذف شود</string>
    <string name="msg_clean_btn_cancel">انصراف</string>
    <string name="chkCleanMediaFilesAfterSync">صداهای ضبط شده پس از ارسال، از گوشی پاک شوند.</string>
    <string name="lbl_statistics_from">از</string>
    <string name="lbl_statistics_syned_calls">تماس همگام شده است.</string>

</resources>