<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/menu_sign_out"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom" />
</menu>